addded z-index fix (hopefully)

--- a/css/wypr.css
+++ b/css/wypr.css
@@ -322,3 +322,6 @@ div.views-slideshow-controls-bottom div.views-slideshow-pager-field-item:hover a
   opacity: .66;
 }
 
+div#views_slideshow_cycle_teaser_section_frontpage_slideshow-page {
+  z-index: 6;
+}
